--- a/styles.css
+++ b/styles.css
@@ -18,10 +18,11 @@ body{
     
 }
 .clockContainer{
-    background-color: rgba(249, 249, 249, 0.625);
+    background-color: rgba(249, 249, 249, 0.527);
    text-align: center;
     max-width: 800px;
     min-height: 600px;
+    /* margin-top: 400px; */
     margin: auto;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -94,4 +95,8 @@ hr{
 }
 #newCitySearchName{
     font-size: 50px;
+}
+footer{
+    font-size: small;
+    color: rgb(151, 102, 175);
 }
